Added the image controller.js
